# antares-faststream

./: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/common/: date_helper.py  event_helper.py  logger.py  nats_helper.py  neo4j_helper.py  pg_helper.py  query_builder.py  scylla_helper.py
app/config/: config.py
app/middleware/: middleware.py
app/router/druid/: fs_dataload_to_druid.py
scripts/: build_docker.sh
